# binaural

./: .gitignore  README.md  binaural.py  conftest.py  cspell.json  default_script.yaml  example_script.yaml  generate  generate.py  pyproject.toml  requirements.txt  run_webapp.py  webapp
.github/workflows/: publish-reusable.yml  pypi-publish.yml  run-tests.yml  testpypi-publish.yml
binaural/: __init__.py  cli.py  constants.py  data_types.py  fade.py  noise.py  parallel.py  tone_generator.py  types.py  utils.py  webui.py
binaural_generator/: __init__.py
binaural_generator/core/: parallel.py  tone_generator.py
binaural_webui/: constants.py  main.py
binaural_webui/components/: audio_handlers.py  config_utils.py  sidebar.py  step_editor.py  ui_utils.py
docs/: music_integration.md
scripts/: creativity_blue.yaml  creativity_theta.yaml  focus_beta.yaml  focus_gamma.yaml  focus_violet.yaml  lucid_dream_pink_noise.yaml  lucid_dreaming.yaml  lucide_dream_pink_noise.yaml  meditation_theta.yaml  migraine_relief.yaml  relaxation_alpha.yaml  relaxation_grey.yaml  relaxation_ocean.yaml  relaxation_rain.yaml  sleep_delta.yaml
tests/: test_common.py  test_new_noise_types.py  test_noise.py  test_ocean_noise.py  test_parallel.py  test_property_based.py  test_rain_noise.py  test_tone_generator.py  test_utils.py
